--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
     ],
     "homepage": "https://github.com/CodeNidus/video-conference",
     "keywords": ["Laravel", "Vue", "VideoConference"],
+    "require": {
+        "php": "^7.0|^8.0",
+        "laravel/framework": "^5.5|^6.0|^7.0|^8.0"
+    },
     "autoload": {
         "psr-4": {
             "Codenidus\\VideoConference\\": "src/"
