--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "keywords": ["Laravel", "Vue", "VideoConference"],
     "require": {
         "php": "^7.0|^8.0",
-        "laravel/framework": "^5.5|^6.0|^7.0|^8.0"
+        "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
