--- a/src/Console/.env.example
+++ b/src/Console/.env.example
@@ -3,5 +3,5 @@
 MIX_WEBRTC_TOKEN_URL="/api/videoconference/userToken"
 MIX_WEBRTC_THEME="Default"
 
-VIDEOCONFERENCE_APP_ID="Project id"
-VIDEOCONFERENCE_APP_SECRET="App Secret Token"
+VIDUS_APP_ID="Project id"
+VIDUS_APP_SECRET="App Secret Token"
